--- a/Paper/bibliography.bib
+++ b/Paper/bibliography.bib
@@ -1,3 +1,85 @@
-@incollection{asdfa,
-	author={Sylvia Striplin},
+@InProceedings{musictransport1,
+  author={Remi Flamary and Cedric Fevotte and Nicolas Courty and Valentin Emiya},
+  title={Optimal spectral transportation with application to music transcription},
+  booktitle = {29th Conference on Neural Information Processing Systems (NIPS 2016)},
+  year = {2016}
+}
+
+
+@misc{musictransport2,
+  author= {Filip Elvander and Stefan Ingi Adabjornsson and Johan Karlsson and Andreas Jakobsson},
+  title = {Using Optimal Transport For Esimating Inharmonic Pitch Signals},
+  year = {2016}
+}
+
+@article{vocoder,
+  author = {Jean Laroche and Mark Dolson},
+  title = {Improved Phase Vocoder Time-Scale Modification of Audio},
+  year = {1999},
+  journal = {IEEE Transactions on Speech and Audio Processing},
+  volume = {7},
+  number = {3}
+}
+
+@InProceedings{justin,
+  author = {Justin Solomon and Fernando de Goes and Gabriel Peyre and Marco Cuturi and Adrean Butscher and Andy Nguyen and Tau Du and Leonidas Guibas},
+  title = {Convolutional Wasserstein Distances: Efficient Optimal Transportation on Geomtric Domains},
+  booktitle = {SIGGRAPH 2015},
+  year = {2015}
+}
+
+@article{reassignment,
+  author = {Kelly R. Fitz and Sean A. Fulop},
+  title = {A Unified Theory of Time-Frequency Reassignment},
+  year = {2005},
+  journal = {Digital Signal Processing}
+}
+
+@misc{portmidi,
+  author = {PortMidi},
+  title = {Platform Independent Library for MIDI I/O},
+  howpublished = {\url{http://portmedia.sourceforge.net/portmidi/}}
+}
+
+@misc{portaudio,
+  title = {PortAudio},
+  author = {Phil Burk},
+  year = {2017},
+  howpublished = {\url{http://www.portaudio.com}}
+}
+
+@misc{ableton,
+  title = {Audio Clips, Tempo, and Warping},
+  author = {Ableton},
+  year = {2017},
+  howpublished = {\url{https://www.ableton.com/en/manual/audio-clips-tempo-and-warping/}}
+}
+
+@misc{melodyne,
+  title = {Celemony Melodyne DNA Editor},
+  year = {2009},
+  author = {Mike Senior},
+  howpublished = {\url{http://www.soundonsound.com/reviews/celemony-melodyne-dna-editor}}
+}
+
+@misc{zynaptiq,
+  title = {Pitchmap},
+  author = {Zynaptiq},
+  year = {2017},
+  howpublished = {\url{http://www.zynaptiq.com/pitchmap/}}
+}
+
+@InProceedings{fftw,
+  title = {A Fast Fourier Transform Compiler},
+  author = {Matteo Frigo},
+  booktitle = {Proceedings of the 1999 ACM SIGPLAN Conference on Programming Language Design and Implimentation (PLDI '99)},
+  year = {1999}
+}
+
+@book{dsprelated,
+  title = {Spectral Audio Signal Processing},
+  author = {Julius O. Smith III},
+  publisher = {Center for Computer Research in Music and Acoustics (CCRMA)},
+  howpublished = {\url{https://www.dsprelated.com/freebooks/sasp/}},
+  year = {2011}
 }
